--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-portfolio_v2",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://shannon-jliu.github.io",
